tests/compile_fail/type_mismatch_mul_quantity_type.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/type_mismatch_mul_quantity_type.rs:26:17
   |
26 |     let x: () = 1.0 * Dimensionless::dimensionless(1.0);
   |            --   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Quantity<f64, Dimension>`
   |            |
   |            expected due to this
   |
   = note: expected unit type `()`
                 found struct `Quantity<f64, Dimension>`
